Add Random Facts and created a Javascript

--- a/Dislikes.html
+++ b/Dislikes.html
@@ -1,11 +1,32 @@
 <html>
 <head>
   <title>Mo's Dislikes</title>
+  <link rel = "stylesheet" href = "Blogasaurus.css">
 </head>
 <body>
-  <h1>FISH</h1>
-  <h2>Reasons Why:</h2>
-  <ol>
+  <h1>My Dislikes</h1>
+  <h2>Fish</h2>
+  <h3>Reasons Why:</h3>
+  <ul>
     <li>They're gross.</li>
+    <li>They smell awful - dead or alive.</li>
+    <li>They make me feel sick when I eat them.</li>
+  </ul>
+  <h2>Mobile Apps</h2>
+  <h3 id="WARNING">Warning: What I'm about to say is very hypocritical as I am
+    the possessor of mutliple apps on my cell phone</h3>
+    <br>
+    <br>
+    <br>
+  <h2>Other Pages You May Enjoy:</h2>
+  <a href="Blogasaurus.html">Home</a>
+  <br>
+    <a href="Random_Facts.html">Random Fun Facts</a>
+    <br>
+    <a href="Favorites.html">My Favorite Things</a>
+    <br>
+    <a href = "Future_Plans.html">My Plans for the Future</a>
+    <br>
+    <a href = "Education.html">My Education</a>
 </body>
 </html>
