--- a/Education.html
+++ b/Education.html
@@ -1,9 +1,33 @@
 <html>
 <head>
   <title>My Education</title>
+  <link rel = "stylesheet" href = "Blogasaurus.css">
 </head>
 <body>
   <h1>Education</h1>
-  <p>I attended Timothy Christian School for the entirety of my educational career and am now going to Rutgers University</p>
+  <h3>I attended Timothy Christian School for the entirety of my educational
+    career and am now going to Rutgers University</h3>
+  <br>
+  <br>
+  <br>
+<h2>Other Pages You May Enjoy:</h2>
+<a href="Blogasaurus.html">Home</a>
+<br>
+  <a href="Random_Facts.html">Random Fun Facts</a>
+  <br>
+  <a href="Favorites.html">My Favorite Things</a>
+  <br>
+  <a href = "Dislikes.html">What I Can't Stand and Kind of Hate</a>
+  <br>
+  <a href = "Future_Plans.html">My Plans for the Future</a>
+  <br>
+  <br>
+  <br>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="Blogasaurus.js"></script>
+  <h2>Comments</h2>
+  <input type="text" id="comments"/>
+  <input type="button" id="comments_button" value="OK"/>
+  <h3 id="UserComments"></h3>
 </body>
 </html>
