--- a/Favorites.html
+++ b/Favorites.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Mo's Favs</title>
+  <link rel = "stylesheet" href = "Blogasaurus.css">
 </head>
 <body>
   <h1>Favorites</h1>
@@ -19,6 +20,20 @@
   </ul>
   <h2>Favorite Websites</h2>
   <a href="http://www.youtube.com">YouTube</a>
+  <br>
   <a href="http://www.poptropica.com/">Classic Online Gaming</a>
+  <br>
+  <br>
+  <br>
+<h2>Other Pages You May Enjoy:</h2>
+<a href="Blogasaurus.html">Home</a>
+<br>
+  <a href="Random_Facts.html">Random Fun Facts</a>
+  <br>
+  <a href = "Dislikes.html">What I Can't Stand and Kind of Hate</a>
+  <br>
+  <a href = "Future_Plans.html">My Plans for the Future</a>
+  <br>
+  <a href = "Education.html">My Education</a>
 </body>
 </html>
