--- a/Future_Plans.html
+++ b/Future_Plans.html
@@ -1,11 +1,22 @@
 <html>
 <head>
-  <title>Mo's Dislikes</title>
+  <title>My Plants for the Future</title>
+  <link rel = "stylesheet" href = "Blogasaurus.css">
 </head>
 <body>
-  <h1>FISH</h1>
-  <h2>Reasons Why:</h2>
-  <ol>
-    <li>They're gross.</li>
+  <h2>No se ahora. Quizas manana?</h2>
+  <br>
+  <br>
+  <br>
+<h2>Other Pages You May Enjoy:</h2>
+<a href="Blogasaurus.html">Home</a>
+<br>
+  <a href="Random_Facts.html">Random Fun Facts</a>
+  <br>
+  <a href="Favorites.html">My Favorite Things</a>
+  <br>
+  <a href = "Dislikes.html">What I Can't Stand and Kind of Hate</a>
+  <br>
+  <a href = "Education.html">My Education</a>
 </body>
 </html>
