--- a/Blogasaurus.html
+++ b/Blogasaurus.html
@@ -1,16 +1,22 @@
 <html>
   <head>
+    <link rel = "stylesheet" href = "Blogasaurus.css">
     <title>All About Mo</title>
   </head>
   <body>
     <h1>Welcome!</h1>
-    <h3>Here at all about Mo. We tell you a bit about our creator. From her background
-      to her likes and dislikes, you'll so much about a person that you could easily be
+    <h3>Here at All About Mo, we tell you a bit about our creator. From her background
+      to her likes and dislikes, you'll learn so much about a person that you could easily be
       by just humaning. </h3>
     <h2>Check these neat links to her newest posts:</h2>
-    <a href="Favorites">My Favorite Things</a>
-    <a href = "Dislikes">What Can't Stand and Kind of Hate</a>
-    <a href = "Future_Plans">My Plans for the Future</a>
-    <a href = "Education">My Education</a>
+    <a href="Random_Facts.html">Random Fun Facts</a>
+    <br>
+    <a href="Favorites.html">My Favorite Things</a>
+    <br>
+    <a href = "Dislikes.html">What I Can't Stand and Kind of Hate</a>
+    <br>
+    <a href = "Future_Plans.html">My Plans for the Future</a>
+    <br>
+    <a href = "Education.html">My Education</a>
   </body>
   </html>
