Something was added.

--- a/Blogasaurus.html
+++ b/Blogasaurus.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel = "stylesheet" href = "Blogasaurus.css">
+    <link rel = "stylesheet" href = "static_folder/Blogasaurus.css">
     <title>All About Mo</title>
   </head>
   <body>
