--- a/Dislikes.html
+++ b/Dislikes.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Mo's Dislikes</title>
-  <link rel = "stylesheet" href = "Blogasaurus.css">
+  <link rel = "stylesheet" href = "static_folder/Blogasaurus.css">
 </head>
 <body>
   <h1>My Dislikes</h1>
@@ -28,5 +28,16 @@
     <a href = "Future_Plans.html">My Plans for the Future</a>
     <br>
     <a href = "Education.html">My Education</a>
+    <br>
+    <br>
+    <br>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="Blogasaurus.js"></script>
+    <h2>Comments</h2>
+    <form name="CommentsSection">
+    <input type="text" id="comments"/>
+    <input type="button" id="comments_button" value="OK"/>
+    <h3 id="UserComments"></h3>
+    </form>
 </body>
 </html>
