--- a/Education.html
+++ b/Education.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>My Education</title>
-  <link rel = "stylesheet" href = "Blogasaurus.css">
+  <link rel = "stylesheet" href = "static_folder/Blogasaurus.css">
 </head>
 <body>
   <h1>Education</h1>
@@ -26,8 +26,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="Blogasaurus.js"></script>
   <h2>Comments</h2>
+  <form name="CommentsSection">
   <input type="text" id="comments"/>
   <input type="button" id="comments_button" value="OK"/>
   <h3 id="UserComments"></h3>
+  <p></p>
+  </form>
 </body>
 </html>
