--- a/Favorites.html
+++ b/Favorites.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Mo's Favs</title>
-  <link rel = "stylesheet" href = "Blogasaurus.css">
+  <link rel = "stylesheet" href = "static_folder/Blogasaurus.css">
 </head>
 <body>
   <h1>Favorites</h1>
