--- a/Future_Plans.html
+++ b/Future_Plans.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>My Plants for the Future</title>
-  <link rel = "stylesheet" href = "Blogasaurus.css">
+  <link rel = "stylesheet" href = "static_folder/Blogasaurus.css">
 </head>
 <body>
   <h2>No se ahora. Quizas manana?</h2>
@@ -18,5 +18,16 @@
   <a href = "Dislikes.html">What I Can't Stand and Kind of Hate</a>
   <br>
   <a href = "Education.html">My Education</a>
+  <br>
+  <br>
+  <br>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="Blogasaurus.js"></script>
+  <h2>Comments</h2>
+  <form name="CommentsSection">
+  <input type="text" id="comments"/>
+  <input type="button" id="comments_button" value="OK"/>
+  <h3 id="UserComments"></h3>
+  </form>
 </body>
 </html>
